# fe-compiler

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: architecture.md  audit.md  index.md  section-impacts.md  section-tree.md
src/fe_compiler/: __init__.py  assets.py
src/fe_compiler/bundles/: __init__.py
src/fe_compiler/bundles/flows/: __init__.py
src/fe_compiler/bundles/flows/screen_outline/: bundle.yaml  screen_outline.md  screen_outline_rules.md  screen_outline_validate.json  section_tree.yaml
src/fe_compiler/cli/: __init__.py  main.py
src/fe_compiler/plugin/: __init__.py  entry.py  plugin.yaml
src/fe_compiler/section_impacts/: __init__.py
src/fe_compiler/section_tree/: __init__.py
src/fe_compiler/validators/: __init__.py
src/fe_compiler/workflows/: __init__.py  fe_pipeline.yaml  fe_pipeline_v1.yaml
tests/: test_plugin_discovery.py  test_screen_outline_step.py  test_workflow_shape.py
tests/unit/: test_package_data_fe.py  test_package_version_contract.py  test_plugin_provider_fe.py  test_real_fe_section_configs.py  test_section_impacts_foundation.py  test_section_tree_foundation.py
